# cpp-sqlite-db-adapter

./: .appveyor.yml  .codacy.yml  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  CppSqliteDbAdapter.sln  IBinaryValue.h  IDatabase.h  IFieldValue.h  IPrimaryKeyValue.h  ITableRecord.h  README.md  RELEASENOTES.md  conanfile.py  conanfile.txt
.github/workflows/: archive-docs.yml
ci/pipelines/: Build.jenkinsfile  Release.jenkinsfile  SnowDebug.properties  SnowRelease.properties
cmake/: CodeCoverage.cmake
include/POSIX/: build_7za.sh
include/Win32/: build_7za_Win.bat
interface/cpp-db-adapter/: IBinaryValue.h  IConnection.h  IConnectionConfiguration.h  IField.h  IPrimaryKey.h  ITable.h  ITableRecordSet.h  ITransaction.h  Types.h
src/: CMakeLists.txt
src/DbAdapterInterface/: IRecord.h  IRecordSet.h  README.md
src/DbSQLiteAdapter/: BinaryValue.cpp  BinaryValue.h  CMakeLists.txt  Connection.cpp  Connection.h  ConnectionConfiguration.cpp  ConnectionConfiguration.h  Database.cpp  Database.h  DateTimeHelper.cpp  DateTimeHelper.h  DbSQLiteAdapter.vcxproj  DbSQLiteAdapter.vcxproj.filters  Field.cpp  Field.h  FieldValue.cpp  FieldValue.h  PrimaryKey.cpp  PrimaryKey.h  PrimaryKeyValue.cpp  PrimaryKeyValue.h  Record.cpp  Record.h  RecordSet.cpp  RecordSet.h  Stdafx.cpp  Stdafx.h  Table.cpp  Table.h  TableRecord.cpp  TableRecord.h  TableRecordSet.cpp  TableRecordSet.h  Transaction.cpp  Transaction.h  stdafx.h  stdafx2.h
src/cpp-sqlite-db-adapter/: BinaryValue.cpp  BinaryValue.h  Connection.h  Database.cpp  Database.h  Field.cpp  Field.h  FieldValue.cpp  FieldValue.h  PrimaryKey.h  PrimaryKeyValue.cpp  Record.h  RecordSet.cpp  RecordSet.h  Table.h  TableRecord.cpp  Transaction.cpp  Transaction.h
src/demo/: main.cpp
src/sqleet-v0.27.2/: CMakeLists.txt
src/sqleet-v0.31.1/: CMakeLists.txt
test/: CMakeLists.txt
test/DbSQLiteAdapterTest/: CMakeLists.txt  DbDDLOperationsTest.cpp  DbDeleteOperationsTest.cpp  DbForeignKeysTest.cpp  DbInsertOperationsTest.cpp  DbQueriesTest.cpp  DbQueryOperationsTest.cpp  DbSQLiteAdapterTest.cpp  DbSQLiteAdapterTest.vcxproj  DbSQLiteAdapterTest.vcxproj.filters  DbTransactionsTest.cpp  DbUpdateOperationsTest.cpp  Utilities.cpp  Utilities.h  main.cpp  stdafx.cpp  stdafx.h
test/DbSQLiteAdapterTest/Helpers/: Helpers.cpp  Helpers.h
test/DbSQLiteAdapterTest/Tests/: DbConnectionTest.cpp  DbDDLOperationsTest.cpp  DbDeleteOperationsTest.cpp  DbForeignKeysTest.cpp  DbInsertOperationsTest.cpp  DbQueriesTest.cpp  DbQueryOperationsTest.cpp  DbTransactionsTest.cpp  DbUpdateOperationsTest.cpp
test/TestUtilities/DbSQLiteAdapter/Comparators/: DbComparator.h
test/TestUtilities/DbSQLiteAdapter/Mocks/: MockBinaryValue.h  MockConnection.h  MockConnectionConfiguration.h  MockDatabase.h  MockField.h  MockFieldValue.h  MockPrimaryKeyValue.h  MockRecord.h  MockRecordSet.h  MockTable.h  MockTableRecord.h  MockTableRecordSet.h  MockTransaction.h
test/TestUtilities/DbSQLiteAdapter/Stubs/: StubField.cpp  StubField.h  StubFieldValue.cpp  StubFieldValue.h  StubPrimaryKey.cpp  StubPrimaryKey.h  StubPrimaryKeyValue.cpp  StubPrimaryKeyValue.h  StubTable.cpp  StubTable.h  StubTableRecord.cpp  StubTableRecord.h  StubTableRecordSet.cpp  StubTableRecordSet.h
test_package/: CMakeLists.txt  DbSQLiteAdapterExample.cpp  conanfile.py
